--- a/Bahar.html
+++ b/Bahar.html
@@ -19,23 +19,23 @@
   </header>
 
   <div class="diagram">  
-    <div class="card" data-nama="Ahmad Hasan" data-usia="52" data-hobi="Duka euy Bingung" data-profesi="Wiraswasta" data-foto="fotokeluarga/ayah.jpg">  
-      <img src="fotokeluarga/ayah.jpg" alt="Foto Ayah">  
+    <div class="card" data-nama="Ahmad Hasan" data-usia="52" data-hobi="Duka euy Bingung" data-profesi="Wiraswasta" data-foto="ayah.jpg">  
+      <img src="ayah.jpg" alt="Foto Ayah">  
       <p>Bapak/Ayah</p>  
     </div>  
 
-    <div class="card" data-nama="Imas Laela Kusumawati" data-usia="42" data-hobi="Memasak" data-profesi="Guru" data-foto="fotokeluarga/ibu.jpg">  
-      <img src="fotokeluarga/ibu.jpg" alt="Foto Ibu">  
+    <div class="card" data-nama="Imas Laela Kusumawati" data-usia="42" data-hobi="Memasak" data-profesi="Guru" data-foto="ibu.jpg">  
+      <img src="ibu.jpg" alt="Foto Ibu">  
       <p>Ibu</p>  
     </div>  
     
-    <div class="card" data-nama="Muhammad Baharuddin Rafa" data-usia="17" data-hobi="Coding/Bermain Gitar" data-profesi="Pelajar" data-foto="fotokeluarga/bahar.jpg">  
-      <img src="fotokeluarga/bahar.jpg" alt="Foto Bahar">  
+    <div class="card" data-nama="Muhammad Baharuddin Rafa" data-usia="17" data-hobi="Coding/Bermain Gitar" data-profesi="Pelajar" data-foto="bahar.jpg">  
+      <img src="bahar.jpg" alt="Foto Bahar">  
       <p>Bahar/나백한</p>  
     </div>  
     
-    <div class="card" data-nama="Alya Qonita Hafidzah" data-usia="8" data-hobi="Bermain Roblox" data-profesi="Pelajar" data-foto="fotokeluarga/alya.jpg">  
-      <img src="fotokeluarga/alya.jpg" alt="Foto Alya">  
+    <div class="card" data-nama="Alya Qonita Hafidzah" data-usia="8" data-hobi="Bermain Roblox" data-profesi="Pelajar" data-foto="alya.jpg">  
+      <img src="alya.jpg" alt="Foto Alya">  
       <p>Alya</p>  
     </div>
   </div>  
@@ -56,4 +56,5 @@
 
   <script src="script.js"></script>  
 </body>  
+
 </html>
